# DriftBuster

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLOUDTASKS.md  CONTRIBUTING.md  Directory.Build.props  LEGAL_ENFORCEMENT.md  LICENSE  NOTICE  PLAN.md  README.md  ROADMAP.md  TODO.md  conftest.py  coverage.json  pyproject.toml  sample.md  sitecustomize.py  versions.json  versions.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  format-addition.md
.github/workflows/: cla-check.yml  compliance.yml
.serena/: project.yml
.serena/memories/: project_summary.md  style_and_conventions.md  suggested_commands.md  task_completion.md
CLA/: ENTITY.md  INDIVIDUAL.md
artifacts/cli-plan/: README.md
artifacts/coverage/: history.csv
docs/: DEMO.md  README.md  config-files.md  configuration-profiles.md  coverage-golden-standard.md  customization.md  day0-baseline.md  detection-types.md  encryption.md  font-telemetry.md  format-addition-guide.md  format-backlog-briefing.md  format-playbook.md  format-support.md  hunt-mode.md  legal-safeguards.md  multi-server-demo.md  plugin-test-checklist.md  powershell-module-plan.md  profile-usage.md  python-cli-plan.md  registry.md  release-notes.md  reporting-roadmap.md  reviewer-checklist.md  testing-strategy.md  tmux-hygiene.md  todo.md  ux-refresh.md  versioning.md  windows-gui-guide.md  windows-gui-notes.md
driftbuster/: __init__.py
fixtures/: README.md
gui/: GuiVersion.props
notes/: dev-host-prep.md  future-iterations.md
samples/: README.md
scripts/: __init__.py  accessibility_summary.py  build_velopack_release.sh  capture.py  coverage_history.py  coverage_report.py  coverage_watch.py  create_day0_baseline.py  demo_day0_baseline.sh  demo_multi_server.py  driftbuster-offline-runner.ps1  font_health_summary.py  font_regression_capture.py  lint_all.sh  lint_powershell.ps1  manual_multi_server_walkthrough.py  offline_compliance_audit.py  package_msix.ps1  package_powershell_module.ps1  perf_diagnostics.py  purge_reporting_retention.py  release_build.py  score_configsamples.py  smoke_multi_server_storage.sh  sync_versions.py  tmux_hygiene.sh  verify_coverage.py  verify_coverage.sh
(+488 files in other folders)
