[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "driftbuster"
version = "0.0.2"
description = "Core detection engine for DriftBuster"
readme = "README.md"
requires-python = ">=3.10"
authors = []
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=42.0.0",
]

[project.scripts]
driftbuster = "driftbuster.cli:console_main"
driftbuster-export-sql = "driftbuster.cli:export_sql_console_main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"driftbuster" = ["secret_rules.json"]
